Added pagination, filmToReview, filmOwned
